fixes #8.  panel h1s h2s h3s will have ellipses if they would otherwise overflow.

--- a/scss/_panels.scss
+++ b/scss/_panels.scss
@@ -19,6 +19,13 @@
       border-top: 1px solid $asu-gray-lighter;
     }
   }
+
+  h1,
+  h2,
+  h3 {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
 .panel-body {
@@ -27,6 +34,8 @@
 
 .panel-title {
   font-size: 18px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .panel-group {
